# libdnf5-plugin-snapper

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING  README.md  libdnf5-plugin-snapper.spec
.github/workflows/: ci.yml  code-quality.yml  release.yml
config/: snapper.conf
src/: snapper_plugin.cpp  snapper_plugin.hpp
tests/: CMakeLists.txt  test_advanced_features.cpp  test_basic.cpp  test_basic_functionality.cpp  test_benchmarks.cpp  test_integration.cpp  test_main.cpp  test_minimal.cpp  test_package_filter_direct.cpp
tests/mocks/: mock_config_parser.hpp  mock_plugin_data.hpp
